update policies
