# handlers/user/handler.go
@@ -2,22 +2,19 @@ package user_handler
 
 import (
 	"github.com/ddan1l/tega-backend/ctx"
-	project_dto "github.com/ddan1l/tega-backend/dto/project"
-	user_dto "github.com/ddan1l/tega-backend/dto/user"
 	errs "github.com/ddan1l/tega-backend/errors"
-	user_usercase "github.com/ddan1l/tega-backend/usecases/user"
-	req "github.com/ddan1l/tega-backend/web/requests"
+	project_usecase "github.com/ddan1l/tega-backend/usecases/project"
 	res "github.com/ddan1l/tega-backend/web/responses"
 	"github.com/gin-gonic/gin"
 )
 
 type userHandler struct {
-	userUsecase user_usercase.UserUsecase
+	projectUsecase project_usecase.ProjectUsecase
 }
 
-func NewUserHandler(userUsecase user_usercase.UserUsecase) UserHandler {
+func NewUserHandler(projectUsecase project_usecase.ProjectUsecase) UserHandler {
 	return &userHandler{
-		userUsecase: userUsecase,
+		projectUsecase: projectUsecase,
 	}
 }
 
@@ -50,80 +47,4 @@ func (h *userHandler) User(c *gin.Context) {
 	}
 
 	res.SuccessWithData(c, r)
-}
-
-// Logout godoc
-// @Summary Projects
-// @Description UserProjects
-// @Tags user
-// @Accept json
-// @Produce json
-// @Success 200 {object} res.SuccessWithDataResponse{data=res.UserProjectsResponse}
-// @Response 403 {object} res.ErrorResponse{error=errs.ForbiddenError}
-// @Response 400 {object} res.ErrorResponse{error=errs.BadRequestError}
-// @Router /user/projects [get]
-func (h *userHandler) UserProjects(c *gin.Context) {
-	if user, err := ctx.GetUserFromContext(c); err != nil {
-		res.Error(c, errs.Forbidden.WithMessage(err.Error()))
-	} else {
-		dto, err := h.userUsecase.GetUserProjects(&user_dto.FindByIdDto{ID: user.ID})
-
-		if err != nil {
-			res.Error(c, errs.BadRequest.WithMessage(err.Error()))
-			return
-		}
-
-		r := &res.UserProjectsResponse{
-			Projects: dto.Projects,
-		}
-
-		res.SuccessWithData(c, r)
-	}
-}
-
-// Logout godoc
-// @Summary Create Project
-// @Description Create Project
-// @Tags user
-// @Accept json
-// @Produce json
-// @Param request body req.CreateProjectRequest true "Create project request"
-// @Success 200 {object} res.SuccessWithDataResponse{data=res.UserProjectResponse}
-// @Response 403 {object} res.ErrorResponse{error=errs.ForbiddenError}
-// @Response 400 {object} res.ErrorResponse{error=errs.BadRequestError}
-// @Response 422 {object} res.ErrorResponse{error=errs.ValidationFailedError}
-// @Router /user/project [post]
-func (h *userHandler) CreateProject(c *gin.Context) {
-	var r req.CreateProjectRequest
-
-	if !req.BindAndValidate(c, &r) {
-		return
-	}
-
-	if user, err := ctx.GetUserFromContext(c); err != nil {
-		res.Error(c, errs.Forbidden.WithMessage(err.Error()))
-	} else {
-
-		createProjectDto := &project_dto.CreateProjectDto{
-			Project: &project_dto.ProjectDto{
-				Name:        r.Name,
-				Slug:        r.Slug,
-				Description: r.Description,
-			},
-			User: user,
-		}
-
-		dto, err := h.userUsecase.CreateProject(createProjectDto)
-
-		if err != nil {
-			res.Error(c, err)
-			return
-		}
-
-		r := &res.UserProjectResponse{
-			Project: *dto,
-		}
-
-		res.SuccessWithData(c, r)
-	}
 }
